Search bar fix align with top.

--- a/style.css
+++ b/style.css
@@ -4403,7 +4403,7 @@ a {
   font-style: italic;
   height: 3rem;
   max-width: 50rem;
-  width: 27.75rem;
+  width: 24rem;
 }
 
 @media only screen and (max-width: 768px) {
