--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -268,7 +268,7 @@ a {
   font-style: italic;
   height: 3rem;
   max-width: 50rem;
-  width: 27.75rem;
+  width: 24rem;
   @include respond-to(handhelds) { width: 93vw; }
 }
 
